# gdk-pixbuf

./: .travis.yml  Cargo.toml  Gir.toml  appveyor.yml
src/: lib.rs  pixbuf.rs
src/auto/: enums.rs  flags.rs  mod.rs  pixbuf.rs  pixbuf_format.rs  pixbuf_loader.rs  pixbuf_simple_anim.rs
