[package]
name = "gdk-pixbuf"
license = "MIT"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["gdk-pixbuf", "gtk-rs", "gnome"]
readme = "README.md"
documentation = "http://gtk-rs.org/docs/gdk_pixbuf/"
version = "0.4.0"
description = "Rust bindings for the GdkPixbuf library"
repository = "https://github.com/gtk-rs/gdk-pixbuf"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[lib]
name = "gdk_pixbuf"

[features]
v2_28 = ["gdk-pixbuf-sys/v2_28"]
v2_30 = ["v2_28", "gdk-pixbuf-sys/v2_30"]
v2_32 = ["v2_30", "gdk-pixbuf-sys/v2_32"]
v2_36 = ["v2_32", "gdk-pixbuf-sys/v2_36"]
v2_36_8 = ["v2_36", "gdk-pixbuf-sys/v2_36_8"]
dox = ["glib/dox", "gdk-pixbuf-sys/dox"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1.3"
optional = true

[dependencies]
libc = "0.2"
gobject-sys = "0.6.0"
glib = "0.5.0"
glib-sys = "0.6.0"
gdk-pixbuf-sys = "0.6.0"
gio-sys = "0.6.0"
gio = "0.4.0"
